...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="thg-96-bM3">
                                                <rect key="frame" x="0.0" y="0.0" width="105" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="profile"/>
                                                <fontDescription key="fontDescription" name="GESSTwoLight-Light" family="GE SS Two" pointSize="18"/>
                                                <state key="normal" title="الصفحة الرئيسية">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zEJ-QR-Cs9">
                                        <rect key="frame" x="304" y="0.0" width="30" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="editName"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="30" id="3yV-zU-3IU"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0QD-Rw-8us">
                                        <rect key="frame" x="304" y="0.0" width="30" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="editEmail"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="0ly-ZK-W22"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lmn-kI-p4n">
                                        <rect key="frame" x="304" y="0.0" width="30" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="editPassword"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="30" id="RKa-nL-NXe"/>
...
                                                <rect key="frame" x="0.0" y="0.0" width="150" height="33"/>
                                                <fontDescription key="fontDescription" name="GESSTwoLight-Light" family="GE SS Two" pointSize="18"/>
                                                <state key="normal" title="قائمة الالعاب">
                                                    <color key="titleColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
...
                                <rect key="frame" x="40" y="247.99999999999997" width="334" height="344.33333333333326"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="سيحقق الطالب الاهداف التالية" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lnf-gP-80t">
                                        <rect key="frame" x="0.0" y="0.0" width="334" height="19.333333333333332"/>
                                        <fontDescription key="fontDescription" name="GESSTwoLight-Light" family="GE SS Two" pointSize="18"/>
...
