...
        @IBAction func resetPass(_ sender: Any) {
        let alert = UIAlertController(title: "نسيت كلمةالمرور؟", message: "ادخل البريد الإلكتروني الخاص بك لتصلك رسالة إعادة تعيين كلمة المرور", preferredStyle: .alert)
           alert.addTextField { (textField) in
               textField.placeholder = "********@**"
           }
           alert.addAction(UIAlertAction(title: "إلغاء", style: .destructive, handler: nil))
           alert.addAction(UIAlertAction(title: "تأكيد", style: .default, handler: { [weak alert] (_) in
            
            if self.isValidEmail((alert?.textFields![0].text)!) == true {
            
            Auth.auth().sendPasswordReset(withEmail: (alert?.textFields![0].text)! ) { error in}
        
         let alert = UIAlertController(title:"تم ارسال الرسالة" , message: "ستجد الرسالة في بريدك الإلكتروني", preferredStyle: .alert)
...
